--- a/index.html
+++ b/index.html
@@ -16,7 +16,48 @@
     </header>
     <!-- /header -->
     <hr>
+    <!-- main -->
+    <main>
+    <!-- sez table --> 
+        <div>
+            <h2>Le mie spese</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Corso</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto aereo</td>
+                        <td>120&euro;</td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">totale</td>
+                        <td>360&euro;</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    <!-- sez table --> 
 
+
+
+    </main>
+    <!-- main -->
 
  </body>
  </html>
