--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="img\pexels-bill-emrich-230794-1.jpg" alt="Tamigi">
         <img src="img\pexels-bill-emrich-230794-2.jpg" alt="Parlamento e Big Ben">
     </header>
-    <!-- /header -->
+    <!-- end header -->
     <hr>
     <!-- main -->
     <main>
@@ -46,18 +46,31 @@
                         <td>120&euro;</td>
                     </tr>
                     <tr>
-                        <td colspan="2">totale</td>
+                        <td colspan="2">Totale</td>
                         <td>360&euro;</td>
                     </tr>
                 </tbody>
             </table>
         </div>
-    <!-- sez table --> 
-
+    <!-- end sez table -->
+    <hr> 
+    <!-- unordered list testato le entity--> 
+        <div>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la &quot;Tower of London&quot;</li>
+                <li>Visitare Grennwich</li>
+                <li>ascoltare un artista di strada a Convent Garden</li>
+                <li>Mangiare il tipico &quot;Fish and Chips&quot; inglese</li>
+            </ul>
+        </div>
+    <!-- end unordered list --> 
+    <hr> 
+    <!-- -->
 
 
     </main>
-    <!-- main -->
+    <!-- end main -->
 
  </body>
  </html>
