add  check mark and ballot entity

--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
         <div>
             <h3>Cose da fare</h3>
             <ul>
-                <li>Visitare la &quot;Tower of London&quot;</li>
-                <li>Visitare Grennwich</li>
-                <li>ascoltare un artista di strada a Convent Garden</li>
-                <li>Mangiare il tipico &quot;Fish and Chips&quot; inglese</li>
+                <li>Visitare la &quot;Tower of London&quot;&#10004;</li>
+                <li>Visitare Grennwich&#10008;</li>
+                <li>ascoltare un artista di strada a Convent Garden&#10008;</li>
+                <li>Mangiare il tipico &quot;Fish and Chips&quot; inglese&#10004;</li>
             </ul>
         </div>
     <!-- end unordered list --> 
     <hr> 
-    <!-- -->
+    <!-- Ore-->
 
 
     </main>
