--- a/index.html
+++ b/index.html
@@ -66,8 +66,35 @@
         </div>
     <!-- end unordered list --> 
     <hr> 
-    <!-- Ore-->
-
+    <!-- unordered list innestate in una ordered-->
+        <div>
+            <ol>
+                <li>
+                    Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong>-Emergenza</li>
+                        <li><strong>101</strong>-Numero Polizia</li>
+                        <li><strong>111</strong>-Numero assistenza Medica</li>
+                    </ul>
+                </li>
+                <li>
+                    Hotel
+                    <ul>
+                        <li><strong>Nome Hotel</strong>: Buckingam Palace</li>
+                        <li><strong>Indirizzo Hotel</strong>: Westmmister, London SW1A1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>
+                    Aereo
+                    <ul>
+                        <li><strong>Volo Andata</strong>: YI234X, ore 9:30 da Milano Malpensa</li>
+                        <li><strong>Volo Ritorno</strong>: YI236X, ore 18:30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+        </div>
+    <!-- end unordered list innestate in una ordered-->
+    <hr>
 
     </main>
     <!-- end main -->
